# mtdp

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: Config.cmake.in  DefaultSetting.cmake  TargetHardCompilation.cmake  Version.cmake
docs/: annotated.html  buffer_8h.html  buffer_8h__dep__incl.map  buffer_8h__dep__incl.md5  buffer_8h_source.html  classes.html  dir_000000_000001.html  dir_2d3ae8018822fb94f6dbe050784e5bd3.html  dir_2d3ae8018822fb94f6dbe050784e5bd3_dep.map  dir_2d3ae8018822fb94f6dbe050784e5bd3_dep.md5  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  errno_8h.html  errno_8h__dep__incl.map  errno_8h__dep__incl.md5  errno_8h_source.html  files.html  functions.html  functions_vars.html  globals.html  globals_defs.html  globals_enum.html  globals_eval.html  globals_func.html  globals_type.html  graph_legend.html  index.html  menudata.js  mtdp_8h.html  mtdp_8h__incl.map  mtdp_8h__incl.md5  mtdp_8h_source.html  pipe_8h.html  pipe_8h__dep__incl.map  pipe_8h__dep__incl.md5  pipe_8h__incl.map  pipe_8h__incl.md5  pipe_8h_source.html  pipeline_8h.html  (+47 more)
docs/search/: all_1.js  all_3.js  all_5.js  all_6.js  all_8.js  classes_0.js  defines_0.js  enums_0.js  enumvalues_0.js  files_2.js  files_3.js  files_4.js  functions_0.js  searchdata.js  typedefs_0.js  variables_0.js  variables_1.js  variables_3.js  variables_4.js  variables_5.js
examples/: finite_datastream.c  infinite_datastream.c
include/: mtdp.h
include/mtdp/: buffer.h  errno.h  pipe.h  pipeline.h  sink.h  source.h  stage.h
src/: api.h  atomic.h  bell.c  bell.h  buffer.c  errno.c  futex.c  futex.h  memory.h  pipe.c  pipeline.c  sem.c  sem.h  sink.c  source.c  stage.c  thread.c  thread.h  worker.c  worker.h
src/impl/: buffer.h  errno.h  pipe.h  pipeline.h  sink.h  source.h  stage.h
test/: fifo.c
